attempted fix for mobile nav bar going behind AG Grid header row on mobile

--- a/charlotte-third-places/styles/globals.css
+++ b/charlotte-third-places/styles/globals.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.ag-header {
+  z-index: 10 !important;
+  position: relative;
+}
+
 .custom-link {
   @apply text-primary hover:text-purple-600 underline underline-offset-4;
 }
